--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,10 +8,17 @@
     "@tsconfig/strictest": "^1.0.2",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@unocss/reset": "^0.48.4",
     "@vitejs/plugin-react": "^2.1.0",
+    "unocss": "^0.48.4",
     "vite": "^3.1.1"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.22.0",
+    "@tanstack/react-query-devtools": "^4.22.0",
+    "@tauri-apps/api": "^1.2.0",
+    "@types/lodash": "^4.14.191",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
