--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "@tsconfig/strictest",
-  "include": ["src"],
+  "include": ["src", "uno.config.ts", "vite.config.ts"],
   "compilerOptions": {
     "noEmit": true,
+    "moduleResolution": "Node",
     "module": "esnext",
     "target": "es2021",
     "lib": ["es2021", "dom"],
