--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
     "vite": "^3.1.1"
   },
   "dependencies": {
+    "@hiogawa/utils": "1.0.0-pre.1",
     "@tanstack/react-query": "^4.22.0",
     "@tanstack/react-query-devtools": "^4.22.0",
     "@tauri-apps/api": "^1.2.0",
