--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,12 +5,13 @@
     "build": "vite build --outDir build"
   },
   "devDependencies": {
-    "@hiogawa/unocss-preset-antd": "1.0.0-pre.1",
+    "@hiogawa/unocss-preset-antd": "^1.2.0",
     "@tsconfig/strictest": "^1.0.2",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@unocss/reset": "^0.48.4",
     "@vitejs/plugin-react": "^2.1.0",
+    "react-router-dom": "^6.7.0",
     "unocss": "^0.48.4",
     "vite": "^3.1.1"
   },
